# alphabot

./: .gitignore
alphabot_bringup/: CMakeLists.txt  package.xml
alphabot_bringup/launch/: bringup.launch.py  navigator.launch.py  real_robot.launch.py  simulated_robot.launch.py  simulated_robot_plain.launch.py
alphabot_controller/: CMakeLists.txt  package.xml
alphabot_controller/alphabot_controller/: twist_relay.py
alphabot_controller/config/: alphabot_controllers.yaml  ekf.yaml  joy_config.yaml  joy_teleop.yaml  mapper_params_online_async.yaml  twist_mux.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
alphabot_controller/launch/: bringup.launch.py  controller.launch.py  joystick_only.launch.py  joystick_teleop.launch copy.py  joystick_teleop.launch.py  test.launch.py
alphabot_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
alphabot_description/: CMakeLists.txt  package.xml
alphabot_description/launch/: display.launch.py  gazebo.launch.py  gazebo_new_.launch.py
alphabot_description/rviz/: alphabot.rviz
alphabot_description/urdf/: alphabot.urdf.xacro  alphabot_gazebo.xacro  alphabot_ros2_control.xacro  camera.xacro  depth_camera.xacro
alphabot_description/worlds/: small_house.world  v1.world
alphabot_description/worlds/charging_dock/: model-1_4.sdf~:Zone.Identifier
alphabot_firmware/: CMakeLists.txt  alphabot_interface.xml  package.xml
alphabot_firmware/alphabot_firmware/: mpu6050_driver.py
alphabot_firmware/include/alphabot_firmware/: alphabot_interface.hpp  base_model.h  helper.h
alphabot_firmware/launch/: hardware_interface.launch.py
alphabot_firmware/src/: alphabot_interface.cpp  model_base.cpp  simple_serial_transmitter.cpp
alphabot_gui/: package.xml  setup.cfg  setup.py
alphabot_gui/alphabot_gui/: alphabot_gui.ui  main.py
alphabot_localization/: CMakeLists.txt  local_localization.launch.py  package.xml  readme.md
alphabot_localization/alphabot_localization/: kalman_filter.py  nav2_test.py
alphabot_localization/config/: amcl.yaml  ekf.yaml
alphabot_localization/launch/: cartographer.launch.py  global_localization.launch.py  local_localization.launch.py  slam_toolbox.launch.py
alphabot_localization/rviz/: cartographer.rviz  global_localization.rviz
alphabot_mapping/: CMakeLists.txt  package.xml
alphabot_mapping/alphabot_mapping/: mapping_with_known_poses.py
alphabot_mapping/include/alphabot_mapping/: mapping_with_known_pose.hpp  mapping_with_known_poses.hpp
alphabot_mapping/launch/: cartographer.launch.py  slam.launch.py  slam_toolbox.launch.py
alphabot_mapping/maps/flat/: flat.pgm  flat.yaml  map.pgm  map.yaml
alphabot_mapping/maps/flat_1/: map.pgm  map.yaml
alphabot_mapping/maps/flat_2/: map.pgm  map.yaml
alphabot_mapping/maps/new_flat/: new_flat.pgm  new_flat.yaml
alphabot_mapping/maps/small_house_1/: small_house_1.pgm  small_house_1.yaml
alphabot_mapping/rviz/: cartographer.rviz  slam.rviz
alphabot_mapping/src/: mapping_with_known_pose.cpp  mapping_with_known_poses.cpp
alphabot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
alphabot_motion/alphabot_motion/: absolute_move.py  publish_cmd_vel.py  relative_move.py
alphabot_motion/include/alphabot_motion/: pd_motion_planner.hpp  pure_pursuit.hpp  pure_pursuit_node.hpp
alphabot_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp  pure_pursuit_node.cpp
alphabot_mpu6050/: CMakeLists.txt  mpu6050_hardware.xml  package.xml  readme.md
alphabot_mpu6050/include/alphabot_mpu6050/: mpu6050_hardware_interface.hpp  mpu6050_lib.h
alphabot_mpu6050/launch/: mpu6050.launch.py
alphabot_mpu6050/src/: mpu6050_hardware_interface.cpp  mpu6050_lib.cpp
alphabot_navigation/: CMakeLists.txt  package.xml
alphabot_navigation/behavior_tree/: simple_navigation.xml  simple_navigation_with_replanning_and_recovery.xml
alphabot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  nav2_params.yaml  planner_server.yaml  velocity_smoother.yaml  waypoint_follower.yaml
alphabot_navigation/launch/: navi.launch.py  navigation.launch.py
alphabot_navigation/rviz/: nav2_default_view.rviz
alphabot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
alphabot_planning/include/alphabot_planning/: astar_planner.hpp  astar_planner_normal_implementation.cpp.hpp  dijkstra_planner.hpp
alphabot_planning/src/: astar_planner.cpp  astar_planner_normal_implementation.cpp  dijkstra_planner.cpp
alphabot_utils/: CMakeLists.txt  package.xml
alphabot_utils/alphabot_utils/: detect_edge.py  gotogoal.py  safety_stop.py  virtual_joystick.py  virtual_joystick.ui  virtual_joystick_2.py  virtual_joystick_windows.py
alphabot_utils/config/: follow_wal.yaml
alphabot_utils/include/alphabot_utils/: aruco_detection.hpp  helper.hpp
alphabot_utils/launch/: follow_wall.launch.py
alphabot_utils/src/: follow_gap.cpp  follow_wall.cpp  imu_publisher.cpp  pure_pursuit.cpp  robot_drive.cpp  safety_stop.cpp  tack_robot_position.cpp
